@@ -17,6 +17,7 @@
 
 package com.publicissapient.kpidashboard.job.recommendationcalculation.writer;
 
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
@@ -28,6 +29,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -47,11 +49,9 @@ import com.publicissapient.kpidashboard.common.service.ProcessorExecutionTraceLo
 @DisplayName("ProjectItemWriter Tests")
 class ProjectItemWriterTest {
 
-	@Mock
-	private RecommendationRepository recommendationRepository;
+	@Mock private RecommendationRepository recommendationRepository;
 
-	@Mock
-	private ProcessorExecutionTraceLogService processorExecutionTraceLogService;
+	@Mock private ProcessorExecutionTraceLogService processorExecutionTraceLogService;
 
 	private ProjectItemWriter writer;
 
@@ -100,8 +100,10 @@ class ProjectItemWriterTest {
 		@DisplayName("Should save all recommendations in chunk")
 		void write_MultipleRecommendations_SavesAll() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(
-					Arrays.asList(recommendation1, recommendation2, recommendation3));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1), List.of(recommendation2), List.of(recommendation3)));
 
 			// Act
 			writer.write(chunk);
@@ -121,7 +123,8 @@ class ProjectItemWriterTest {
 		@DisplayName("Should save single recommendation")
 		void write_SingleRecommendation_SavesSuccessfully() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recommendation1));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recommendation1)));
 
 			// Act
 			writer.write(chunk);
@@ -132,30 +135,33 @@ class ProjectItemWriterTest {
 
 			List<RecommendationsActionPlan> saved = captor.getValue();
 			org.junit.jupiter.api.Assertions.assertEquals(1, saved.size());
-			org.junit.jupiter.api.Assertions.assertEquals("project-1", saved.get(0).getBasicProjectConfigId());
+			org.junit.jupiter.api.Assertions.assertEquals(
+					"project-1", saved.get(0).getBasicProjectConfigId());
 		}
 
 		@Test
 		@DisplayName("Should not save when chunk is empty")
 		void write_EmptyChunk_NoSave() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.emptyList());
+			Chunk<List<RecommendationsActionPlan>> chunk = new Chunk<>(Collections.emptyList());
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
 			verify(recommendationRepository, never()).saveAll(anyList());
-			verify(processorExecutionTraceLogService, never()).upsertTraceLog(anyString(), anyString(), eq(true),
-					eq(null));
+			verify(processorExecutionTraceLogService, never())
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should filter out null recommendations before saving")
 		void write_ChunkWithNulls_FiltersNulls() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(
-					Arrays.asList(recommendation1, recommendation2, recommendation3));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1), List.of(recommendation2), List.of(recommendation3)));
 
 			// Act
 			writer.write(chunk);
@@ -173,7 +179,7 @@ class ProjectItemWriterTest {
 		@DisplayName("Should not save when all items are null")
 		void write_AllNullItems_NoSave() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.emptyList());
+			Chunk<List<RecommendationsActionPlan>> chunk = new Chunk<>(Collections.emptyList());
 
 			// Act
 			writer.write(chunk);
@@ -187,13 +193,13 @@ class ProjectItemWriterTest {
 		void write_LargeChunk_SavesAll() {
 			// Arrange
 			int chunkSize = 100;
-			List<RecommendationsActionPlan> items = new java.util.ArrayList<>();
+			List<List<RecommendationsActionPlan>> items = new java.util.ArrayList<>();
 			for (int i = 0; i < chunkSize; i++) {
 				RecommendationsActionPlan rec = new RecommendationsActionPlan();
 				rec.setBasicProjectConfigId("project-" + i);
-				items.add(rec);
+				items.add(List.of(rec));
 			}
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(items);
+			Chunk<List<RecommendationsActionPlan>> chunk = new Chunk<>(items);
 
 			// Act
 			writer.write(chunk);
@@ -215,85 +221,93 @@ class ProjectItemWriterTest {
 		@DisplayName("Should log trace for each saved recommendation")
 		void write_MultipleRecommendations_LogsTraceForEach() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(
-					Arrays.asList(recommendation1, recommendation2, recommendation3));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1), List.of(recommendation2), List.of(recommendation3)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService, times(3)).upsertTraceLog(eq("recommendation-calculation"), anyString(),
-					eq(true), eq(null));
+			verify(processorExecutionTraceLogService, times(3))
+					.upsertTraceLog(eq("recommendation-calculation"), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should log trace with correct project IDs")
 		void write_Recommendations_LogsWithCorrectProjectIds() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Arrays.asList(recommendation1, recommendation2));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Arrays.asList(List.of(recommendation1), List.of(recommendation2)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService).upsertTraceLog(eq("recommendation-calculation"), eq("project-1"), eq(true),
-					eq(null));
-			verify(processorExecutionTraceLogService).upsertTraceLog(eq("recommendation-calculation"), eq("project-2"), eq(true),
-					eq(null));
+			verify(processorExecutionTraceLogService)
+					.upsertTraceLog(eq("recommendation-calculation"), eq("project-1"), eq(true), eq(null));
+			verify(processorExecutionTraceLogService)
+					.upsertTraceLog(eq("recommendation-calculation"), eq("project-2"), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should not log trace when chunk is empty")
 		void write_EmptyChunk_NoTraceLog() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.emptyList());
+			Chunk<List<RecommendationsActionPlan>> chunk = new Chunk<>(Collections.emptyList());
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService, never()).upsertTraceLog(anyString(), anyString(), eq(true),
-					eq(null));
+			verify(processorExecutionTraceLogService, never())
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should only log trace for non-null items")
 		void write_ChunkWithNulls_LogsOnlyForNonNulls() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Arrays.asList(recommendation1, recommendation2));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Arrays.asList(List.of(recommendation1), List.of(recommendation2)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService, times(2)).upsertTraceLog(eq("recommendation-calculation"), anyString(),
-					eq(true), eq(null));
+			verify(processorExecutionTraceLogService, times(2))
+					.upsertTraceLog(eq("recommendation-calculation"), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should log trace with success=true")
 		void write_Recommendations_LogsWithSuccessTrue() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recommendation1));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recommendation1)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService).upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
+			verify(processorExecutionTraceLogService)
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should log trace with null error message")
 		void write_Recommendations_LogsWithNullError() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recommendation1));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recommendation1)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(processorExecutionTraceLogService).upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
+			verify(processorExecutionTraceLogService)
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 	}
 
@@ -307,15 +321,16 @@ class ProjectItemWriterTest {
 			// Arrange
 			RecommendationsActionPlan recWithNullId = new RecommendationsActionPlan();
 			recWithNullId.setBasicProjectConfigId(null);
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recWithNullId));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recWithNullId)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
-			verify(recommendationRepository, times(1)).saveAll(anyList());
-			verify(processorExecutionTraceLogService).upsertTraceLog(eq("recommendation-calculation"), eq(null), eq(true),
-					eq(null));
+			verify(recommendationRepository, never()).saveAll(anyList());
+			verify(processorExecutionTraceLogService, never())
+					.upsertTraceLog(anyString(), anyString(), anyBoolean(), anyString());
 		}
 
 		@Test
@@ -324,21 +339,24 @@ class ProjectItemWriterTest {
 			// Arrange
 			RecommendationsActionPlan recWithEmptyId = new RecommendationsActionPlan();
 			recWithEmptyId.setBasicProjectConfigId("");
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recWithEmptyId));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recWithEmptyId)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
 			verify(recommendationRepository, times(1)).saveAll(anyList());
-			verify(processorExecutionTraceLogService).upsertTraceLog(eq("recommendation-calculation"), eq(""), eq(true), eq(null));
+			verify(processorExecutionTraceLogService)
+					.upsertTraceLog(eq("recommendation-calculation"), eq(""), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should handle valid recommendations")
 		void write_MixedNullAndValid_ProcessesValidOnes() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Arrays.asList(recommendation1, recommendation2));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Arrays.asList(List.of(recommendation1), List.of(recommendation2)));
 
 			// Act
 			writer.write(chunk);
@@ -349,8 +367,8 @@ class ProjectItemWriterTest {
 
 			List<RecommendationsActionPlan> saved = captor.getValue();
 			org.junit.jupiter.api.Assertions.assertEquals(2, saved.size());
-			verify(processorExecutionTraceLogService, times(2)).upsertTraceLog(anyString(), anyString(), eq(true),
-					eq(null));
+			verify(processorExecutionTraceLogService, times(2))
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 	}
 
@@ -362,33 +380,89 @@ class ProjectItemWriterTest {
 		@DisplayName("Should call saveAll before logging traces")
 		void write_Recommendations_SavesBeforeLogging() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(Collections.singletonList(recommendation1));
-			org.mockito.InOrder inOrder = org.mockito.Mockito.inOrder(recommendationRepository,
-					processorExecutionTraceLogService);
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(Collections.singletonList(List.of(recommendation1)));
+			org.mockito.InOrder inOrder =
+					org.mockito.Mockito.inOrder(recommendationRepository, processorExecutionTraceLogService);
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
 			inOrder.verify(recommendationRepository).saveAll(anyList());
-			inOrder.verify(processorExecutionTraceLogService).upsertTraceLog(anyString(), anyString(), eq(true),
-					eq(null));
+			inOrder
+					.verify(processorExecutionTraceLogService)
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
 		}
 
 		@Test
 		@DisplayName("Should process all recommendations in sequence")
 		void write_MultipleRecommendations_ProcessesInSequence() {
 			// Arrange
-			Chunk<RecommendationsActionPlan> chunk = new Chunk<>(
-					Arrays.asList(recommendation1, recommendation2, recommendation3));
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1), List.of(recommendation2), List.of(recommendation3)));
 
 			// Act
 			writer.write(chunk);
 
 			// Assert
 			verify(recommendationRepository, times(1)).saveAll(anyList());
-			verify(processorExecutionTraceLogService, times(3)).upsertTraceLog(anyString(), anyString(), eq(true),
-					eq(null));
+			verify(processorExecutionTraceLogService, times(3))
+					.upsertTraceLog(anyString(), anyString(), eq(true), eq(null));
+		}
+
+		@Test
+		@DisplayName("Should handle chunk with multiple recommendations per list item")
+		void write_ChunkWithMultipleRecommendationsPerItem_SavesAll() {
+			// Arrange
+			RecommendationsActionPlan rec4 = new RecommendationsActionPlan();
+			rec4.setBasicProjectConfigId("project-4");
+			rec4.setRecommendations(new Recommendation());
+
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1, rec4),
+									List.of(recommendation2),
+									List.of(recommendation3)));
+
+			// Act
+			writer.write(chunk);
+
+			// Assert
+			ArgumentCaptor<List<RecommendationsActionPlan>> captor = ArgumentCaptor.forClass(List.class);
+			verify(recommendationRepository, times(1)).saveAll(captor.capture());
+
+			List<RecommendationsActionPlan> saved = captor.getValue();
+			Assertions.assertEquals(4, saved.size());
+			Assertions.assertTrue(saved.contains(recommendation1));
+			Assertions.assertTrue(saved.contains(rec4));
+			Assertions.assertTrue(saved.contains(recommendation2));
+			Assertions.assertTrue(saved.contains(recommendation3));
+		}
+
+		@Test
+		@DisplayName("Should handle chunk with empty lists")
+		void write_ChunkWithEmptyLists_SkipsEmptyLists() {
+			// Arrange
+			Chunk<List<RecommendationsActionPlan>> chunk =
+					new Chunk<>(
+							Arrays.asList(
+									List.of(recommendation1), Collections.emptyList(), List.of(recommendation2)));
+
+			// Act
+			writer.write(chunk);
+
+			// Assert
+			ArgumentCaptor<List<RecommendationsActionPlan>> captor = ArgumentCaptor.forClass(List.class);
+			verify(recommendationRepository, times(1)).saveAll(captor.capture());
+
+			List<RecommendationsActionPlan> saved = captor.getValue();
+			Assertions.assertEquals(2, saved.size());
+			Assertions.assertTrue(saved.contains(recommendation1));
+			Assertions.assertTrue(saved.contains(recommendation2));
 		}
 	}
 }
